<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuiLou</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Page de démarrage -->
    <string name="userText">Nom d\'utilisateur : </string>
    <string name="passwordText">Mot de passe : </string>
    <string name="confirm">Confirmer</string>
    <string name="addUserCLick">Ajouter un utilisateur</string>

    <!-- Page AddUser -->
    <string name="addUser">Nom d\'utilisateur : </string>
    <string name="addPassword">Mot de passe : </string>
    <string name="addPasswordC">Confirmer votre mot de passe : </string>

    <!-- Page Menu -->
    <string name="friendMenu">Ami</string>
    <string name="eventMenu">Événement</string>
    <string name="title_activity_friend_menu">Menu des amis</string>
    <string name="title_activity_event_menu">Menu des événements</string>

    <!-- Menu Friend -->
    <string name="addFriend">Ajouter un ami</string>
    <string name="listFriend">Voir tout les amis</string>

    <!-- Menu Event -->
    <string name="addEvent">Ajouter un événement</string>
    <string name="listEvent">Voir tout les événements</string>
    <string name="inviteEvent">Inviter à un événement</string>
    <string name="message">Gérer vos messages</string>
    <string name="title_activity_add_friend">Ajouter un ami</string>

    <!-- Menu Add Event -->
    <string name="addEventName">Donner un nom à l\'évènement</string>
    <string name="addEventDescription">Description de l\'évènement</string>
    <string name="addEventBeginDate">Date de début</string>
    <string name="addEventEndDate">Date de fin</string>
    <string name="addEventBeginHour">Heure de début</string>
    <string name="addEventEndHour">Heure de fin</string>
    <string name="buttonSuppr">Supprimer</string>
    <string name="buttonInviteConfirm">Confirmer</string>
    <string name="synchronize">Synchroniser les événements avec l\'agenda</string>
    <string name="syncReturn">Retour</string>

    <!-- Menu Add Friend -->
    <string name="addFrientText">Ajouter un ami</string>
    <string name="title_activity_list_friend">Liste d\'ami</string>
    <string name="title_activity_list_event">Liste d\'événement</string>
    <string name="title_activity_message">Message</string>
    <string name="title_activity_invite_event">Invitation</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_add_user">Ajouter un utilisateur</string>
    <string name="title_activity_add_event">Ajouter un événement</string>
    <string name="title_activity_synchronize">SynchronizeActivity</string>

</resources>
